# tracing-logfmt

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  release.toml
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: rust-ci.yml
src/: builder.rs  formatter.rs  lib.rs  serializer.rs
src/formatter/: builder.rs
