[package]
name = "tracing-logfmt"
version = "0.3.7"
edition = "2021"
authors = ["Embark <opensource@embark-studios.com>"]
license = "MIT OR Apache-2.0"
description = "A logfmt formatter for tracing events and spans"
homepage = "https://github.com/EmbarkStudios/tracing-logfmt"
repository = "https://github.com/EmbarkStudios/tracing-logfmt"
keywords = ["logging", "tracing"]
readme = "README.md"

[dependencies]
nu-ansi-term = { version = "0.50", optional = true }
time = { version = "0.3.7", features = ["formatting"] }
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[features]
ansi_logs = ["dep:nu-ansi-term"]
